# libb64

./: AUTHORS  CHANGELOG  CMakeLists.txt
base64/: Makefile
include/b64/: decode.h  encode.h
